<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".ui.HomeActivity">
    <ImageView
        android:layout_margin="40dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_baseline_how_to_reg_24"
        android:contentDescription="@string/imagelogo" />


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content"
>
   <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Username"
    android:textSize="20sp"
    android:textColor="@color/purple_700"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:id="@+id/usernamee"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/Username"
        android:textSize="20sp"
        android:textColor="@color/purple_700"
        android:layout_marginStart="20dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp"
            android:textColor="@color/purple_700"
            />

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:id="@+id/emaill"
            android:text="@string/email"
            android:textSize="20sp"
            android:textColor="@color/purple_700"
            android:layout_marginStart="20dp" />
    </LinearLayout>

    <ImageView
        android:layout_marginTop="80dp"
        android:layout_width="50dp"
        android:contentDescription="@string/logout"
        android:layout_height="50dp"
        android:id="@+id/logout"
        android:src="@drawable/ic_baseline_all_out_24"
        />
</LinearLayout>